# orchepy

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
src/: lib.rs  main.rs
src/api/: events.rs  executions.rs  flows.rs  health.rs  mod.rs  response.rs  ui.rs  workflows.rs
src/api/cases/: automation_handler.rs  create.rs  mod.rs  move_case.rs  query.rs
src/db/migrations/: 001_initial_schema.sql  002_case_system.sql
src/engine/: automation_executor.rs  executor.rs  matcher.rs  mod.rs  retry.rs
src/middleware/: mod.rs  whitelist.rs
src/models/: automation.rs  case.rs  event.rs  execution.rs  flow.rs  mod.rs  step.rs  workflow.rs
src/repositories/: case_repository.rs  mod.rs  workflow_repository.rs
src/services/: mod.rs  webhook.rs
tests/: automation_executor_test.rs  automation_integration_test.rs  case_operations_test.rs
