[package]
name = "orchepy"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
axum = { version = "0.8.6", features = ["macros"] }
axum-macros = "0.5.0"
chrono = { version = "0.4.42", features = ["serde"] }
dotenvy = "0.15.7"
reqwest = { version = "0.12.24", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["trace", "cors"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
uuid = { version = "1.18.1", features = ["v4", "serde"] }
